# yew-app

./: .gitignore  Cargo.toml
src/: app.rs  main.rs
