[package]
name = "yew-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.19"

glob = "0.3.0"

# parse markdown
markdown-parser = { version = "0.1.2", features = ["adapt"] }
toml = "0.5.9"
serde = { version = "1.0", features = ["derive"] }
chrono = {version = "0.4.22", features = ["serde"]}
slug = "0.1.4"

# web server
tokio = { version = "1", features = ["full"] }
warp = "0.3"
